<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kyotsu.wordbook.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
 	<item
        android:id="@+id/action_Login"
        android:orderInCategory="100"
        android:showAsAction="never"        
        android:title="@string/action_login"/>
 	 <item
        android:id="@+id/action_remove"
        android:orderInCategory="100"
        android:showAsAction="never"        
        android:title="@string/remove"/>
 	 <item
        android:id="@+id/action_remove_words"
        android:orderInCategory="100"
        android:showAsAction="never"        
        android:title="@string/remove_words"/>
 	 <item
        android:id="@+id/show_visible"
        android:orderInCategory="100"
        android:showAsAction="never"        
        android:title="@string/show_visible"/>
</menu>
