<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- Header aligned to top -->

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center" >
    </RelativeLayout>

    <!-- Footer aligned to bottom -->

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#FFFF93"
        android:gravity="center" >

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnsort"
                    style="@style/ButtonText"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_pink_glossy"
                    android:text="@string/button_sort1" />

                <Button
                    android:id="@+id/btnShow"
                    style="@style/ButtonText"
                    android:layout_width="100dp"
                    android:background="@drawable/btn_blue_glossy"
                    android:text="@string/button_show1" />

                <Button
                    android:id="@+id/btnAdd"
                    style="@style/ButtonText"
                    android:layout_width="100dp"
                    android:background="@drawable/btn_pink_glossy"
                    android:text="@string/button_add" />

                <Button
                    android:id="@+id/btnCancel"
                    style="@style/ButtonText"
                    android:layout_width="150dp"
                    android:background="@drawable/btn_pink_glossy"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/btnremove"
                    style="@style/ButtonText"
                    android:layout_width="150dp"
                    android:background="@drawable/btn_blue_glossy"
                    android:text="@string/button_delete3" />
            </LinearLayout>
        </HorizontalScrollView>
    </RelativeLayout>

    <!-- Inflate the contents of the ScrollView dynamicaly -->

    <ListView
        android:id="@+id/listview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/footer"
        android:layout_below="@id/header" />

</RelativeLayout>