<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#FFE6FF"
    android:orientation="vertical">
   <TextView 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="20dip"
        android:textSize="20dip"
        android:layout_marginRight="20dip"
        android:text="Word"
        android:gravity="left"
        android:typeface="monospace"
        android:textColor="#00ccff"/>            
    <EditText
        android:id="@+id/Word_edit"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:scrollHorizontally="true"
        android:autoText="false"
        android:capitalize="none"
        android:gravity="fill_horizontal"
        android:hint="@string/word_hint"/>
         
     <TextView
        android:id="@+id/Translation"
        android:textSize="20dip"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:text="Translation"
        android:gravity="left"
        android:typeface="monospace"
        android:textColor="#00ccff"
       />    
    <EditText
        android:id="@+id/Translation_edit"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:scrollHorizontally="true"
        android:autoText="false"
        android:capitalize="none"
        android:gravity="fill_horizontal"
        android:hint="@string/translation_hint"
        />     
        
    
<!-- Footer aligned to bottom -->

<RelativeLayout android:layout_height="wrap_content" 
	    android:layout_width="match_parent" android:gravity="center" 
	    android:id="@+id/footer" 
		android:layout_alignParentBottom="true"> 
		<Button
		android:id="@+id/cancel"
		android:layout_width="150dp"
		android:textColor="#ff4d4d"
		android:layout_height="wrap_content"
		android:text="@string/cancel" />

      	<Button
		android:id="@+id/ok"
		android:layout_width="150dp"
		android:layout_height="wrap_content"
		android:text="@string/ok"
		android:textColor="#ff4d4d"
		android:layout_toRightOf="@+id/cancel"/>
      	</RelativeLayout>
</LinearLayout>
